Update README.md and .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DJANGO_SETTINGS_MODULE=server.settings
 
 SERVER_PORT=8000
+ADMIN_PASSWORD=qweqweqwe
 
 DATABASE_NAME=testplatform
 DATABASE_USER=testplatform
