Implement login via github

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DATABASE_USER=testplatform
 DATABASE_PASSWORD=secretpassword
 DATABASE_HOST=database
 DATABASE_PORT=5432
+
+SOCIAL_AUTH_GITHUB_KEY=a873ce149e0f6bef7c33
+SOCIAL_AUTH_GITHUB_SECRET=4608d575731521dcc00756bc5755fb9cef3ec7c4
